--- a/src/modules/products/product.njk
+++ b/src/modules/products/product.njk
@@ -18,23 +18,23 @@
 
     <div class="product__details_size">
       {# <span>Размер:</span><br> #}
-      <span class="size">75G</span>
-      <span class="size">75G</span>
-      <span class="size">75G</span>
-      <span class="size">75G</span>
-      <span class="size">75G</span>
-      <span class="size">75G</span>
-      <span class="size">75G</span>
-      <span class="size">75G</span>
-      <span class="size">75G</span>
-      <span class="size">75G</span>
-      <span class="size">75G</span>
-      <span class="size">75G</span>
-      <span class="size">75G</span>
-      <span class="size">75G</span>
-      <span class="size">75G</span>
-      <span class="size">75G</span>
-      <span class="size">75G</span>
+      <span class="product__size">75G</span>
+      <span class="product__size">75G</span>
+      <span class="product__size active">75G</span>
+      <span class="product__size">75G</span>
+      <span class="product__size">75G</span>
+      <span class="product__size">75G</span>
+      <span class="product__size">75G</span>
+      <span class="product__size">75G</span>
+      <span class="product__size">75G</span>
+      <span class="product__size">75G</span>
+      <span class="product__size">75G</span>
+      <span class="product__size">75G</span>
+      <span class="product__size">75G</span>
+      <span class="product__size">75G</span>
+      <span class="product__size">75G</span>
+      <span class="product__size">75G</span>
+      <span class="product__size">75G</span>
     </div>
     <hr>
     <button class='product__cart-button'>В корзину</button>
